[package]
name = "alltalk_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.12", features = ["json"] }
rodio = "^0.19"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
stream-download = "^0.9"
thiserror = "^1"

# For examples
[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
